--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -3,12 +3,15 @@ name: Code Linting
 on: [push]
 
 jobs:
-  build:
+  golintci-lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: '^1.21.0'
-      - run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
-      - run: make lint
+      - uses: actions/checkout@v4
+      - name: golintci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: latest
+          args: -c .golangci.yaml
