--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -10,4 +10,4 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '^1.21.0'
-      - run: make test
+      - run: go test -timeout=5m $(go list ./... | grep -v /vendor/)
