--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,6 +1,14 @@
 name: Code Linting
 
-on: [push]
+on: 
+  push:
+    tags:
+      - v*
+  pull_request:
+
+permissions:
+  contents: read
+  pull-requests: read
 
 jobs:
   golintci-lint:
@@ -8,10 +16,20 @@ jobs:
     steps:
       - uses: actions/setup-go@v5
         with:
-          go-version: '^1.21.0'
+          go-version: "1.23"
       - uses: actions/checkout@v4
       - name: golintci-lint
         uses: golangci/golangci-lint-action@v6
         with:
           version: latest
           args: -c .golangci.yaml
+
+  semgrep:
+    name: semgrep
+    runs-on: ubuntu-latest
+    container:
+      image: returntocorp/semgrep
+    if: (github.actor != 'dependabot[bot]')
+    steps:
+      - uses: actions/checkout@v4
+      - run: semgrep scan .
